csrf対策を追加

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,13 +3,11 @@
 <head>
 <meta charset="UTF-8" ></meta>
 <title>ログイン</title>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+<link th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet"/>
 <link href="/css/form.css" rel="stylesheet"/>
-<script src="https://code.jquery.com/jquery.min.js"
-        th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.min.js}"></script>
+<script th:src="@{/webjars/axios/dist/axios.min.js}"></script>
 </head>
 <body>
 	<div class="container">
